...
        </View>
      </Pressable>

      <BottomSheet isOpen={open} onClose={handleCancel} snapPoints={['40%']}>
        <View className="mb-4 flex-row items-center justify-between">
          <Button variant="ghost" onPress={handleCancel}>
            Cancel
          </Button>
          <Text variant="h3">{label}</Text>
          <Button variant="ghost" onPress={handleConfirm}>
            Done
          </Button>
        </View>
...
