...
          }}
        />
        <Tabs.Screen
          name="discover"
          options={{
            title: t('common.discover'),
            tabBarButtonTestID: 'discover-tab',
            tabBarIcon: ({ color }) => <Search size={iconSize} color={color} />,
          }}
        />
        <Tabs.Screen
          name="map"
          options={{
...
          }}
        />
        <Tabs.Screen
          name="wallet"
          options={{
            title: t('common.wallet'),
            tabBarButtonTestID: 'wallet-tab',
            tabBarIcon: ({ color }) => <Wallet size={iconSize} color={color} />,
          }}
        />
        <Tabs.Screen
          name="profile"
          options={{
...
